// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputItem - Demo Basic 1`] = `
<div class="ui-example-child ui-example-child-input-item-0">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-field-item ui-input-item is-solid is-browser is-amount left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">普通文本</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="普通文本" maxlength="5" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser is-active is-disabled left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">禁用表单</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="" disabled="disabled" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser is-active left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">只读表单</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="" readonly="readonly" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser is-highlight left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">高亮表单</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="高亮表单" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser center normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">文本居中</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="文本居中" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser right normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">文本居右</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="文本居右" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`InputItem - Demo Business scenario input 1`] = `
<div class="ui-example-child ui-example-child-input-item-2">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-field-item ui-input-item is-solid is-browser left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">银行卡</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="bankCard xxxx xxxx xxxx xxxx" maxlength="" autocomplete="off" type="tel" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser is-active left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">手机号</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="phone xxx xxxx xxxx" maxlength="" autocomplete="off" type="tel" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">金额</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="money xx, xxx.xxxx" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser is-active left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">数字</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="digit 0123456789" maxlength="" autocomplete="off" type="tel" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">密码</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="password *********" maxlength="" autocomplete="off" type="password" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">邮箱</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="其他标准 html input 类型" maxlength="" autocomplete="off" type="email" value="" class="ui-input-item-input"> </div>
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`InputItem - Demo Floating title input 1`] = `
<div class="ui-example-child ui-example-child-input-item-1">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-field-item ui-input-item is-browser is-title-latent is-clear left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">真实姓名</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="投保人姓名" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <div class="ui-field-item-right">
            <div class="ui-input-item-clear" style="display:none;"><i class="ui-icon icon-font ui-icon-clear clear md" style="color:;"></i></div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-browser is-title-latent is-clear left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">身份证号</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="投保人身份证号" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <div class="ui-field-item-right">
            <div class="ui-input-item-clear" style="display:none;"><i class="ui-icon icon-font ui-icon-clear clear md" style="color:;"></i></div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`InputItem - Demo Large size financial input 1`] = `
<div class="ui-example-child ui-example-child-input-item-3">
  <fieldset class="ui-field">
    <header class="ui-field-header">
      <div class="ui-field-heading">
        <legend class="ui-field-title">转出金额(元)</legend>
        <!---->
      </div>
      <div class="ui-field-action">
        <div class="field-operator"><i class="ui-icon icon-font ui-icon-info info md" style="color:;"></i></div>
      </div>
    </header>
    <div class="ui-field-content">
      <div class="ui-field-item ui-input-item is-solid is-browser is-highlight with-brief is-amount left large">
        <div class="ui-field-item-content">
          <!---->
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="最多30万元" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <div class="ui-field-item-right">
            <!---->
            <div class="input-operator">全部取出</div>
            <!---->
          </div>
        </div>
        <div class="ui-field-item-children">
          <!---->
          <div class="ui-input-item-brief">
            <p>理财提示文案，字符超出10个自动变小</p>
          </div>
          <!---->
        </div>
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`InputItem - Demo input with controls 1`] = `
<div class="ui-example-child ui-example-child-input-item-4">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-field-item ui-input-item is-solid is-browser is-clear left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">清空按钮</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="normal text" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <div class="ui-field-item-right">
            <div class="ui-input-item-clear" style="display:none;"><i class="ui-icon icon-font ui-icon-clear clear md" style="color:;"></i></div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser is-clear left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">金融键盘</label>
          <!---->
          <div class="ui-field-item-control">
            <div class="ui-input-item-fake is-waiting"><span></span> <span class="ui-input-item-fake-placeholder">financial number keyboard</span></div>
          </div>
          <div class="ui-field-item-right">
            <div class="ui-input-item-clear" style="display:none;"><i class="ui-icon icon-font ui-icon-clear clear md" style="color:;"></i></div>
            <!---->
          </div>
        </div>
        <div class="ui-field-item-children">
          <!---->
          <!---->
          <div id="-number-keyboard" class="ui-number-keyboard ui-input-item-number-keyboard">
            <div class="ui-popup bottom" style="display:none;">
              <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
              <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
                <!---->
                <div class="ui-number-keyboard-container professional">
                  <div class="keyboard-number">
                    <ul class="keyboard-number-list">
                      <li class="keyboard-number-item"><span>1</span></li>
                      <li class="keyboard-number-item"><span>2</span></li>
                      <li class="keyboard-number-item"><span>3</span></li>
                      <li class="keyboard-number-item"><span>4</span></li>
                      <li class="keyboard-number-item"><span>5</span></li>
                      <li class="keyboard-number-item"><span>6</span></li>
                      <li class="keyboard-number-item"><span>7</span></li>
                      <li class="keyboard-number-item"><span>8</span></li>
                      <li class="keyboard-number-item"><span>9</span></li>
                      <li class="keyboard-number-item"><span>.</span></li>
                      <li class="keyboard-number-item"><span>0</span></li>
                      <li class="keyboard-number-item slidedown"><span></span></li>
                    </ul>
                  </div>
                  <div class="keyboard-operate">
                    <ul class="keyboard-operate-list">
                      <li class="keyboard-operate-item delete"><span></span></li>
                      <li class="keyboard-operate-item confirm"><span>确定</span></li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser left normal">
        <div class="ui-field-item-content">
          <!---->
          <div class="ui-field-item-left"><svg class="ui-icon icon-svg ui-icon-bank-zs md" style="fill:;">
              <use xlink:href="#bank-zs"></use>
            </svg></div>
          <div class="ui-field-item-control"> <input name="" placeholder="left/right slots" maxlength="" autocomplete="off" type="text" value="" class="ui-input-item-input"> </div>
          <div class="ui-field-item-right">
            <!----> <i class="ui-icon icon-font ui-icon-info info md" style="color:;"></i>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`InputItem - Demo input with error message 1`] = `
<div class="ui-example-child ui-example-child-input-item-5">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-field-item ui-input-item is-solid is-browser is-active is-error is-clear left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">手机号码</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="" maxlength="" autocomplete="off" type="tel" value="" class="ui-input-item-input"> </div>
          <div class="ui-field-item-right">
            <div class="ui-input-item-clear" style="display:none;"><i class="ui-icon icon-font ui-icon-clear clear md" style="color:;"></i></div>
            <!---->
          </div>
        </div>
        <div class="ui-field-item-children">
          <div class="ui-input-item-msg">
            <p>手机号码无效</p>
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <div class="ui-field-item ui-input-item is-solid is-browser is-clear left normal">
        <div class="ui-field-item-content"><label class="ui-field-item-title">储蓄卡号</label>
          <!---->
          <div class="ui-field-item-control"> <input name="" placeholder="" maxlength="" autocomplete="off" type="tel" value="" class="ui-input-item-input"> </div>
          <div class="ui-field-item-right">
            <div class="ui-input-item-clear" style="display:none;"><i class="ui-icon icon-font ui-icon-clear clear md" style="color:;"></i></div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;
